correct z-index for toast

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -97,7 +97,7 @@
   left: 0;
   right: 0;
   margin: 0 auto;
-  z-index: 1000;
+  z-index: 2000;
 
   &__message {
     display: flex;
